--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
                     >
                     <button id="analyzeBtn" class="btn-primary">Analyze Profile</button>
                 </div>
-                <p class="hint">Explore your filmography here</p>
+                <p class="hint">Example: LetterboxdUsername</p>
             </div>
             
             <div id="errorMessage" class="error-message hidden"></div>
